--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.541.0",
+    "motion": "^12.23.12",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -60,7 +61,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24.3.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
