--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.170.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.0"
   },
@@ -64,6 +65,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.170.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
